PN-2805 implementata API che chiama la nuova di Checkout per il pagamento
